# dynamic-sitting-posture-recognition

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  Makefile  README.md  SUBMISSION.md  environment.yml  pyproject.toml  requirements.lock.txt
.github/workflows/: ci.yml  release-macos-dmg.yml
configs/: calibration.yaml  default.yaml
packaging/macos/: PostureMirror.spec
scripts/: benchmark_runtime.py  build_dmg.sh  build_macos_app.sh  calibrate_thresholds.py  cleanup_app_residuals.sh  evaluate_sample_set.py  install_macos_app.sh  prefetch_models.py  uninstall_macos_app.sh
src/posture_recognition/: __init__.py  cli.py  experiments.py  pipeline.py  realtime.py  types.py
src/posture_recognition/features/: geometry.py
src/posture_recognition/gui/: __init__.py  posturemirror_app.py
src/posture_recognition/pose/: __init__.py  openpose_torch.py  torchvision_pose.py  ultralytics_pose.py
src/posture_recognition/render/: overlay.py
src/posture_recognition/rules/: __init__.py  classifier.py
src/posture_recognition/runtime/: __init__.py  webcam_runtime.py
tests/: test_backend_selection.py  test_camera_failfast.py  test_cli_smoke.py  test_geometry.py  test_gui_smoke.py  test_kneeling_upper_body_contract.py  test_macos_install_cleanup.py  test_model_path_resolution.py  test_openpose_backend.py  test_overlay.py  test_rules.py  test_upper_body_rules.py  test_webcam_loop_logic.py
